# pocketllm

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/pocketllm/: __init__.py  cli.py
src/pocketllm/benchmark/: __init__.py  reporter.py  runner.py
src/pocketllm/devices/: __init__.py  selector.py
src/pocketllm/devices/profiles/: android_mid.yaml  jetson_nano.yaml  jetson_orin_nano.yaml  linux_x86.yaml  rpi4.yaml  rpi5.yaml
src/pocketllm/pipeline/: __init__.py  converter.py  packager.py  quantizer.py
src/pocketllm/utils/: __init__.py  downloader.py
templates/android/: config.env.j2
templates/jetson/: config.env.j2
templates/raspberry_pi/: config.env.j2  pocketllm.service.j2
tests/: __init__.py  test_benchmark.py  test_devices.py  test_quantizer.py
