[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pocketllm"
version = "0.1.0"
description = "One-click LLM quantization and deployment for edge devices"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "PocketLLM Contributors" },
]
keywords = ["llm", "quantization", "edge-ai", "deployment", "gguf", "mnn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "huggingface-hub>=0.23.0",
    "jinja2>=3.1.0",
    "psutil>=5.9.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
gptq = [
    "auto-gptq>=0.7.0",
]
mnn = [
    "MNN>=3.0.0",
]

[project.scripts]
pocketllm = "pocketllm.cli:app"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
